[project]
name = "runable-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.116.0",
    "jupyter-client>=8.6.3",
    "openai>=1.94.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
